[tool.poetry]
name = "convexhull-bestgrab"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
scipy = "1.10.1"
matplotlib = "^3.7.2"
scikit-learn = "^1.3.0"
ultralytics = "^8.0.166"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
